# currency

./: .gitignore  .npmrc  Cargo.toml  Makefile  README.md  dfx.json  package-lock.json  package.json  tsconfig.json  vite.config.js
.github/workflows/: release-package.yml  test.yml
.storybook/: main.ts  preview.tsx  tailwind.config.ts  tailwind.css
.storybook/__mocks__/: tokens.ts
declarations/ic_siwb_provider/: ic_siwb_provider.did  ic_siwb_provider.did.d.ts  ic_siwb_provider.did.js  index.d.ts  index.js
declarations/ic_siws_provider/: ic_siws_provider.did.d.ts  ic_siws_provider.did.js
scripts/: deploy-sign-in-providers.sh  deploy.ckbtc.sh  deploy.sh  download.ckbtc.sh  faucet.ckbtc.sh  run-tests.sh
src/: ckbtc_ledger_canister_interface.rs  ckbtc_minter_canister_interface.rs  cketh_minter_canister_interface.rs  cksol_minter_canister_interface.rs  ckusdc_canister_interface.rs  currency_error.rs  icrc1_types.rs  lib.rs  query.rs  query_btc.rs  rake_constants.rs  state.rs  transfer.rs  utils.rs
src/types/: canister_wallet.rs  constants.rs  currency.rs  currency_manager.rs  mod.rs  token_registry.rs
tests/: Cargo.toml
tests/src/: currency_manager_argument_tests.rs  currency_manager_btc_tests.rs  currency_manager_cketh_tests.rs  currency_manager_cksepoliaeth_tests.rs  currency_manager_cksepoliausdc_tests.rs  currency_manager_cksol_minter_tests.rs  currency_manager_cksol_tests.rs  currency_manager_ckusdc_tests.rs  currency_manager_ckusdt_tests.rs  currency_manager_icp_tests.rs  currency_manager_test_icp_tests.rs  env.rs  (+4 more)
ui/: global.d.ts  index.ts  queries.ts
(+125 files in other folders)
