[package]
name = "currency"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = "0.10.22"
ic-ledger-types = "0.16.0"
ic-cdk = "0.20.0"
ic-stable-structures = "0.7.2"
serde = { version = "1.0.227", features = ["derive"] }
serde_bytes = "0.11.17"
thiserror = "2.0.18"
num-traits = "0.2.19"

[dev-dependencies]
tokio = { version = "1.48.0", features = ["full"] }
